--- a/style/style.css
+++ b/style/style.css
@@ -380,3 +380,33 @@ input,select{
     left: 20px;
 
 }
+/* footer */
+footer{
+    background: var(--color-grey);
+}
+.footer{
+    width: 75%;
+    margin:0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer_logo > h1{
+    margin: 2rem 0;
+}
+.footer_card{
+    width: 20%;
+}
+.footer_card > h2{
+    margin: 1rem 0;
+}
+.copyright{
+    width: 75%;
+    margin: 0 auto;
+    padding: 1rem 0;
+}
+.copyright > p{
+    text-align: center;
+    margin: 1rem 0;
+}
