--- a/style/style.css
+++ b/style/style.css
@@ -380,6 +380,15 @@ input,select{
     left: 20px;
 
 }
+.get_started{
+    width: 75%;
+    margin: 0 auto;
+    padding: 40px;
+    text-align: center;
+}
+.get_started > h1{
+    margin: 20px;
+}
 /* footer */
 footer{
     background: var(--color-grey);
